force-app/main/default/objects/Quote__c/fields/Applicant_Insured__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Insured__c</fullName>
    <label>Applicant/Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>