force-app/main/default/objects/Quote__c/fields/Application_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Application_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Reviewed?</label>
    <type>Checkbox</type>
</CustomField>