force-app/main/default/objects/Quote__c/fields/Authorized_Representative__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Representative__c</fullName>
    <formula>Applicant_Insured__r.Authorized_Represenatative_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Representative</label>
    <type>Checkbox</type>
</CustomField>