force-app/main/default/objects/Quote__c/fields/Bind__c.field-meta.xml
<CustomField>
    <fullName>Bind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bind</label>
    <type>Checkbox</type>
</CustomField>