force-app/main/default/objects/Quote__c/fields/Date_of_Quote__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Quote__c</fullName>
    <label>Date of Quote</label>
    <type>Date</type>
</CustomField>