force-app/main/default/objects/Quote__c/fields/Desired_Attachment_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Attachment_Date__c</fullName>
    <label>Proposed Inception Date</label>
    <type>Date</type>
</CustomField>