force-app/main/default/objects/Quote__c/fields/Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Name__c</fullName>
    <label>Insured Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>