force-app/main/default/objects/Quote__c/fields/OldProducers__c.field-meta.xml
<CustomField>
    <fullName>OldProducers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OldProducers</label>
    <referenceTo>Producer__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>