force-app/main/default/objects/Quote__c/fields/Open_Closed__c.field-meta.xml
<CustomField>
    <fullName>Open_Closed__c</fullName>
    <label>Open/Closed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Closed/Written</label>
            </value>
            <value>
                <fullName>Closed/Not Written</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>