force-app/main/default/objects/Quote__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <formula>Applicant_Insured__r.Indicated_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>