force-app/main/default/objects/Quote__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>