force-app/main/default/objects/Quote__c/fields/Producer_City__c.field-meta.xml
<CustomField>
    <fullName>Producer_City__c</fullName>
    <label>Producer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>