force-app/main/default/objects/Quote__c/fields/Producer_Country__c.field-meta.xml
<CustomField>
    <fullName>Producer_Country__c</fullName>
    <label>Producer Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>