force-app/main/default/objects/Quote__c/fields/Producer_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Producer_State_Province__c</fullName>
    <label>Producer State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>