force-app/main/default/objects/Quote__c/fields/Producer_Street__c.field-meta.xml
<CustomField>
    <fullName>Producer_Street__c</fullName>
    <label>Producer Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>