force-app/main/default/objects/Quote__c/fields/Producer_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Producer_Zip_Postal_Code__c</fullName>
    <label>Producer Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>