force-app/main/default/objects/Quote__c/fields/Quote_Expires_in__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expires_in__c</fullName>
    <label>Quote Expires in</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
                <default>true</default>
                <label>30 days</label>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>