force-app/main/default/objects/Quote__c/fields/Quote_given_to__c.field-meta.xml
<CustomField>
    <fullName>Quote_given_to__c</fullName>
    <label>Quote given to</label>
    <length>30</length>
    <type>Text</type>
</CustomField>