force-app/main/default/objects/Quote__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>AUTO-NEW</fullName>
            </value>
            <value>
                <fullName>AUTO-RENEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>