force-app/main/default/objects/Quote__c/fields/Requried_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Requried_Insurance__c</fullName>
    <formula>Applicant_Insured__r.Required_Insurance_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requried Insurance</label>
    <type>Checkbox</type>
</CustomField>