force-app/main/default/objects/Quote__c/recordTypes/DisableBindButton.recordType-meta.xml
<RecordType>
    <fullName>DisableBindButton</fullName>
    <active>true</active>
    <label>Quote</label>
</RecordType>