force-app/main/default/objects/Quote__c/recordTypes/EnableBindButton.recordType-meta.xml
<RecordType>
    <fullName>EnableBindButton</fullName>
    <active>true</active>
    <label>Create Quote</label>
</RecordType>