force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Type__c</columns>
    <columns>Applicant_Insured__c</columns>
    <columns>Date_of_Quote__c</columns>
    <columns>Open_Closed__c</columns>
    <columns>Amount__c</columns>
    <columns>Number_of_Units__c</columns>
    <columns>Quote_Expires_in__c</columns>
    <columns>Quote_given_by__c</columns>
    <columns>Producer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>